--- a/AB Testing/AB_Testing.ipynb
+++ b/AB Testing/AB_Testing.ipynb
@@ -1701,7 +1701,7 @@
     }
    ],
    "source": [
-    "# Visaulise the Data\n",
+    "# Visualize the Data\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(10, 4))\n",
     "\n",
