--- a/BQ_SQL/BQ_SQL_Analysis.ipynb
+++ b/BQ_SQL/BQ_SQL_Analysis.ipynb
@@ -2048,7 +2048,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Interpreation**\n",
+        "**Interpretation**\n",
         "1. The number of pageview increase, the visit, the total revenue and the average revenue would decrease.\n",
         "2. The visit and the total revenue will decrease in a faster way when pageview increase.\n"
       ]
